[package]
name = "sp-rust"
version = "0.1.0"
authors = ["xthexder"]
edition = "2018"

[profile.dev]
opt-level = 2

[dependencies]
cxx = "1.0"
wasmer = "4.0.0-beta.3"
wasmer-wasix = "0.8.0"
anyhow = "1.0"
static_assertions = "1.1"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
