[package]
name = "sp-rust"
version = "0.1.0"
authors = ["xthexder"]
edition = "2018"

[profile.dev]
opt-level = 2

[dependencies]
cxx = "1.0"
wasmer = "2.1"
anyhow = "1.0"
static_assertions = "1.1"
winit = "0.28"
vulkano = "0.33"
vulkano-win = "0.33"
once_cell = "*"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
