[package]
name = "screen-rs"
version = "0.1.0"
authors = ["nauscar"]
edition = "2018"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
byteorder = "1.3"
cxx = "1.0"
env_logger = "0.8"
getrandom = "0.2"
gilrs = "0.8"
libc = "0.2.0"
log = "0.4"
pixels = "0.2.0"
randomize = "3.0"
winit = "0.24"
winit_input_helper = "0.9"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]